src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

html {
  @apply h-full;
  font-size: 16px;
  min-width: 100%;
}

main {
  @apply h-full;
}

main > div {
  height: auto;
}
.gradient-bg-before > span {
  width: calc(100% - 2px);
  height: calc(100% - 2px);
  margin-right: 1px;
}

.gradient-bg-before::before,
.gradient-bg {
  background-color: #fbab7e;
  background-image: linear-gradient(62deg, #fbab7e 0%, #e06c22 100%);
  background-repeat: no-repeat;
  background-position: center center;
  background-attachment: fixed;
}

.gradient-text {
  background: linear-gradient(62deg, #fbab7e 0%, #e06c22 100%);
  background-clip: text;
  -webkit-text-fill-color: transparent;
}

.gradient-text-color-light {
  color: #fbab7e;
}

.gradient-text-color-dark {
  color: #e06c22;
}

.outer-rim::before {
  width: calc(100% - 1rem);
  height: calc(100% - 1rem);
}

.bg-black {
  background-color: #120c0b;
}

body {
  color: white;
  @apply h-full;
}

.tool-belt-list > li {
  @apply mr-2 md:mr-4 mb-2 md:mb-4;
}

@layer components {
  .bg-glass {
    @apply bg-opacity-25 backdrop-blur-sm shadow-glass rounded-lg bg-white p-4 border border-white border-opacity-20;
  }
}

